                                                     -*- coding: utf-8 -*-
Changes for APR 1.6.0

  *) Add new --enable-pool-concurrency-check configure option to detect
     thread-unsafe concurrent accesses to pools. Runtime costs should be
     relatively low. [Stefan Fritsch]

  *) Add support code to teach valgrind about APR pools and allocators.
     [Stefan Fritsch]

  *) Add apr_sockaddr_info_copy(), for making a deep copy of an
     apr_sockaddr_t into a specified pool.  [Yann Ylavic
     <ylavic.dev gmail.com>]

  *) Added Unix domain socket support.
     [Mladen Turk]

  *) Add apr_shm_delete() to compliment apr_shm_remove().
     [Jim Jagielski]

  *) Intruduce APR_PERMS_SET macros for setting the owner/group on
     objects. Currently only implemented for shm, proc and global
     mutexes on posix platforms.
     [Mladen Turk]

  *) Add apr_escape_ldap() and apr_pescape_ldap(), escaping characters
     as described by RFC4514 and RFC4515 respectively. [Graham Leggett]

Changes for APR 1.5.1

  *) apr_os_proc_mutex_get() on Unix:  Avoid segfault for cross-
     process pthread mutexes.  [Yann Ylavic <ylavic.dev gmail.com>]

  *) When using shmget-based shared memory, the ID used for ftok is
     now an APR hash of the filename instead of the constant '1'.
     We do this to help avoid collisions. PR 53996 [Jim Jagielski]

  *) apr_socket_atreadeof(): Fix breakage on OS X. [Jim Jagielski]

  *) Fix POSIX shared memory (shm_open) use for named shared memory.
     Includes adding '--enable-posix-shm' to force POSIX shm if
     available, and OS X compatibility. PR 55928.
     [Jozef Hatala <jh-asf skrt org>, Jim Jagielski]

  *) Fix race condition when calling apr_dir_make_recursive from
     multiple threads on Windows.
     [Bert Huijben]

  *) Fix apr_escape.c compilation errors on EBCDIC platforms.
     [Eric Covener]

  *) FreeBSD 10: Correct a regression in 1.5.0 which affected non-
     blocking sockets in some applications, including httpd.  [Jeff